# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Untitled Diagram.drawio  viikko3.md  viikko3_t2.md
src/: board.py  game_board.py  game_loop.py  image.py  index.py  main.py  results.py  results.txt  ship.py
src/assets/: image.py
src/objects/: board.py  player.py  ship.py
src/sprites/: battleship.py  battleship_vert.py  carrier.py  carrier_vert.py  cruiser.py  cruiser_vert.py  destroyer.py  destroyer_vert.py  field.py  hit.py  miss.py  sea.py  submarine.py  submarine_vert.py
src/tests/: board_test.py  player_test.py  results_test.py  ship_test.py  test_main.py
src/ui/: menu.py  pvc.py  scores.py  single.py
